# snap-to-report-worker

./: .gitignore  Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  image_cluster_server.py  onnx_runtime.py  pyproject.toml  requirements.txt
.agent/rules/: python.md
.github/workflows/: deploy.yml
app/: schema.py
app/clustering/clusters/: base_cluster.py  ensemble.py  gps.py
app/clustering/extractors/: apgem.py  apgen_clip.py  base_extractor.py  clip.py  segmenter.py
docs/: gcp.md
domain/: photometa.py  pipeline.py  runner.py
domain/clusterers/: base_clusterer.py  gps_clusterer.py  img_clusterer.py  knn_clusterer.py
domain/extractors/: APGeM_extractor.py  clip_extractor.py  metadata_extractor.py
experiment/masking/: training_yolo.ipynb
experiment/masking/s2r-masking-3/: data.yaml
experiment/optimize_features/: README.md  clusters.py  dataset.py  images.ipynb  masking.py  mobilenet_extractor.py  obtuna.py  optimization.py  optuna.py  tmp.py  vertex_extractor.py
experiment/optimize_features/extractors/: __init__.py  base.py  cosplace.py  mobilenet.py  null.py  vertex.py
experiment/optimize_features/features/: params_cosplace_nomask_20251215_102052.json  params_dataset_cosplace_masking_251215_103834.json
experiment/scripts/: copyfiles.py
src/: main.py
src/api/: api.py
src/api/endpoints/: cluster.py  pdf.py
src/app/: config.py
src/app/cluster/: model_loader.py  models.py  (+1 more)
src/common/: callback_sender.py
src/core/: config.py  dependencies.py  device.py  logger.py
tests/: test_clustering_logic.py  test_pdf_logic.py
(+45 files in other folders)
